--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-storage": "^4.1.2",
     "url-parse": "^1.4.7",
     "uuid": "^8.3.0"
   },
