Added redux-persist middleware to the store. Persist is stored in the indexedDB of the browser

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-indexeddb-storage": "^1.0.4",
     "redux-storage": "^4.1.2",
+    "redux-storage-engine-indexed-db": "^1.0.0",
     "url-parse": "^1.4.7",
     "uuid": "^8.3.0"
   },
