Switched to context + localstorage instead of redux. Exceeding the localstorage limit upon 1000 elements in array.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "dexie": "^3.0.2",
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
+    "react-detect-offline": "^2.4.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
