--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.16.1",
     "dexie": "^3.0.2",
     "dotenv": "^8.2.0",
+    "export-from-json": "^1.3.4",
     "lodash": "^4.17.20",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.6.0",
