--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.20",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-detect-offline": "^2.4.0",
     "react-dom": "^16.13.1",
