--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.20",
     "lodash.throttle": "^4.1.1",
     "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
+    "postcss": "^8.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-detect-offline": "^2.4.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "react-text-truncate": "^0.16.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
